// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CampaignItemListFeature component should render 1`] = `
<View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "CardListItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "labelText": null,
          "relatedNode": Object {
            "__typename": "UniversalContentItem",
            "id": "UniversalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          },
          "summary": "Card summary",
          "title": "Card Title",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={0.7}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={
                      Array [
                        Object {
                          "cache": "force-cache",
                          "uri": "https://picsum.photos/800",
                        },
                      ]
                    }
                    style={
                      Object {
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1711302509,
                      4278216557,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#00676D"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <Text
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#F8F7F4",
                      "fontFamily": "InterUI-Black",
                      "fontSize": 36,
                      "lineHeight": 41.4,
                    }
                  }
                >
                  Card Title
                </Text>
                <View
                  hasSummary={true}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <Text
                      bold={false}
                      italic={false}
                      numberOfLines={2}
                      style={
                        Object {
                          "color": "#F8F7F4",
                          "fontFamily": "InterUI-Regular",
                          "fontSize": 16,
                          "lineHeight": 26,
                        }
                      }
                    >
                      Card summary
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The CampaignItemListFeature component should render a loading state for isLoading 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 0,
      }
    }
    vertical={false}
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 14,
          "marginVertical": 3.5,
          "width": "60%",
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 36,
          "marginVertical": 2.6999999999999993,
          "width": "100%",
        }
      }
    />
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId0",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId1",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId2",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId3",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId4",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId5",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId6",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId7",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId8",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
        Object {
          "channelType": "",
          "coverImage": Array [],
          "id": "fakeId9",
          "isLoading": true,
          "parentChannel": Object {
            "id": "",
            "name": "",
          },
          "title": "",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.7}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={Array []}
                    style={
                      Object {
                        "aspectRatio": 1,
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1725684697,
                      4292598745,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#DBDBD9"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <View
                  hasSummary={false}
                  style={
                    Object {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 36,
                          "marginVertical": 2.6999999999999993,
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The CampaignItemListFeature component should render a section title 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 0,
      }
    }
    vertical={false}
  >
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "#A5A5A5",
          "fontFamily": "InterUI-Medium",
          "fontSize": 14,
          "lineHeight": 21,
        }
      }
    >
      This renders smaller than its name would suggest
    </Text>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "CardListItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "labelText": null,
          "relatedNode": Object {
            "__typename": "UniversalContentItem",
            "id": "UniversalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          },
          "summary": "Card summary",
          "title": "Card Title",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={0.7}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={
                      Array [
                        Object {
                          "cache": "force-cache",
                          "uri": "https://picsum.photos/800",
                        },
                      ]
                    }
                    style={
                      Object {
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1711302509,
                      4278216557,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#00676D"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <Text
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#F8F7F4",
                      "fontFamily": "InterUI-Black",
                      "fontSize": 36,
                      "lineHeight": 41.4,
                    }
                  }
                >
                  Card Title
                </Text>
                <View
                  hasSummary={true}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <Text
                      bold={false}
                      italic={false}
                      numberOfLines={2}
                      style={
                        Object {
                          "color": "#F8F7F4",
                          "fontFamily": "InterUI-Regular",
                          "fontSize": 16,
                          "lineHeight": 26,
                        }
                      }
                    >
                      Card summary
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The CampaignItemListFeature component should render with a subtitle 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 0,
      }
    }
    vertical={false}
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Black",
          "fontSize": 36,
          "lineHeight": 41.4,
        }
      }
    >
      This renders larger than you might expect
    </Text>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "CardListItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "labelText": null,
          "relatedNode": Object {
            "__typename": "UniversalContentItem",
            "id": "UniversalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          },
          "summary": "Card summary",
          "title": "Card Title",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={0.7}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          clickable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            cardColor="#00676D"
            style={
              Object {
                "backgroundColor": "#00676D",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 6,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              >
                <View
                  animate={null}
                  customAnimate={null}
                  onReady={false}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "resizeMode": "cover",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    maxAspectRatio={1}
                    minAspectRatio={1}
                    onLoad={[Function]}
                    source={
                      Array [
                        Object {
                          "cache": "force-cache",
                          "uri": "https://picsum.photos/800",
                        },
                      ]
                    }
                    style={
                      Object {
                        "backgroundColor": "#A5A5A5",
                        "opacity": 0,
                        "resizeMode": "cover",
                        "width": "100%",
                      }
                    }
                  />
                </View>
                <BVLinearGradient
                  colors={
                    Array [
                      1711302509,
                      4278216557,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  locations={
                    Array [
                      0,
                      0.8,
                    ]
                  }
                  overlayColor="#00676D"
                  overlayType="featured"
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "marginTop": "-40%",
                    "paddingBottom": 32,
                    "paddingHorizontal": 24,
                    "paddingVertical": 16,
                  }
                }
              >
                <Text
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#F8F7F4",
                      "fontFamily": "InterUI-Black",
                      "fontSize": 36,
                      "lineHeight": 41.4,
                    }
                  }
                >
                  Card Title
                </Text>
                <View
                  hasSummary={true}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "paddingTop": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "marginRight": 16,
                      }
                    }
                  >
                    <Text
                      bold={false}
                      italic={false}
                      numberOfLines={2}
                      style={
                        Object {
                          "color": "#F8F7F4",
                          "fontFamily": "InterUI-Regular",
                          "fontSize": 16,
                          "lineHeight": 26,
                        }
                      }
                    >
                      Card summary
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
